fixed bugs in backspacing

--- a/css/main.css
+++ b/css/main.css
@@ -58,10 +58,10 @@ body {
   align-items: center;
   justify-content: flex-start;
   row-gap: 10px ;
+  padding: 10px; /* remove */
 }
 
 main {
-  height: 200px;
   max-width: 750px;
 
   display: flex;
@@ -69,7 +69,9 @@ main {
   align-items: center;
   row-gap: 20px;
 
-  padding: 0px 10px;
+  padding: 13px 0px 10px 15px; /* remove */
+  border-top: 1px solid lightgray; /* remove */
+  border-bottom: 1px solid lightgray; /* remove */
 }
 
 main phrase {
@@ -125,55 +127,35 @@ subpixel-antialiased
   - On most non-retina displays, this will give the sharpest text.
 */
 
-  main div.inputarea input {
-  /* width: 60%;
-
-  outline-offset: 0px;
-  outline-width: 8px;
-  outline-style: solid;
-  outline-color: whitesmoke;
-  border: 1px solid rgb(230, 230, 230);
-
-  padding: 4px;
-  font-size: 1.2rem;
-  color: rgb(156, 156, 156);
-  font-family: "Roboto Mono", monospace; */
-
-  display: block;
+main div input {
+  display: block; /* remove */
   margin: 0px;
   padding: 0px;
-  width: 1px;
-  height: 1px;
+  width: 0px;
+  height: 0px;
   border: none;
   outline: none;
   caret-color: transparent;
   background-color: var(--caret-color-hidden);
 }
-  
-.active {
-  color: black;
-}
-.underlined {
-  text-decoration-line: underline;
-  text-underline-offset: 1px;
-  text-decoration-thickness: 1px;
-  text-decoration-style: solid;
-  text-decoration-color: var(--basetext-color);
-}
-.correct {
-  color: #99cc00;
-}
+ 
 .extra {
   color: #ae0000;
 }
 .fade {
   color: #9b9b9b;
 }
-.incorrect {
-  color: red;
-}
 .hidden {
   display: none;
+}
+.active {
+  color: black;
+}
+.correct {
+  color: #99cc00;
+}
+.incorrect {
+  color: red;
 }
 .error {
   color: #d50000;
@@ -182,4 +164,11 @@ subpixel-antialiased
   text-decoration-thickness: 2px;
   text-decoration-style: solid;
   text-decoration-color: #ff0000;
+}
+.wordunderline {
+  text-decoration-line: underline;
+  text-underline-offset: 1px;
+  text-decoration-thickness: 1px;
+  text-decoration-style: solid;
+  text-decoration-color: var(--basetext-color);
 }
